external-crates/move/crates/move-compiler/tests/move_check/parser/named_blocks_invalid_2.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:4:9
  │
4 │         'name {
  │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01001]: invalid character
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:5:32
  │
5 │             if (cond) { return 'name 10 };
  │                                ^^^^^ Unexpected character (')

